fix: cards and email blocks overflow

--- a/_src/scss/_cards.scss
+++ b/_src/scss/_cards.scss
@@ -1,5 +1,5 @@
 .cards {
-   margin: 0px 0px 100px 0px;
+   margin: 0px 0px 70px 0px;
    @media (max-width: $md3) {
       margin: 0px 0px 50px 0px;
    }
@@ -21,6 +21,8 @@
    &__column {
       flex: 0 1 25%;
       padding: 0 15px;
+      margin: 0px 0px 30px 0px;
+      display: flex;
       @media (max-width: $md1) {
          flex: 0 1 33.333%;
          margin: 0px 0px 30px 0px;
@@ -40,6 +42,9 @@
    overflow: hidden;
    position: relative;
    transition: all 0.3s;
+   display: flex;
+   flex-direction: column;
+   height: 100%;
    @media (min-width: 992px) {
       &:hover {
          transform: scale(1.01);
@@ -47,6 +52,7 @@
       }
    }
    &__image {
+      display: inline-block;
       picture {
          width: 255px;
          height: 230px;
@@ -87,6 +93,9 @@
    }
    &__body {
       padding: 21px 25px 19px 24px;
+      display: flex;
+      flex-direction: column;
+      flex: 1 1 auto;
       @media (max-width: $md3) {
          padding: 15px;
       }
@@ -98,6 +107,7 @@
       line-height: 26px;
       color: $second_color;
       margin: 0px 0px 21px 0px;
+      flex: 1 1 auto;
       @media (max-width: $md3) {
          margin: 0px 0px 15px 0px;
       }
