--- a/_src/scss/_email.scss
+++ b/_src/scss/_email.scss
@@ -1,6 +1,6 @@
 .email {
    background-color: $main_color;
-   &__container {
+   &__content {
       display: flex;
       align-items: center;
       min-height: 97px;
